refactor(build): Relocate dependencies to convention plugin
Move common dependencies from the main build.gradle.kts to the new AndroidConventionPlugin to centralize dependency management and improve build consistency across modules.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,6 +33,20 @@ kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-p
 ktlint-gradle-plugin = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "ktlint" }
 
 [bundles]
+default-dependencies = [
+    "androidx-lifecycle-runtime-ktx",
+    "androidx-core-ktx"
+]
+
+default-test-dependencies = [
+    "junit"
+]
+
+default-android-test-dependencies = [
+    "androidx-junit",
+    "androidx-espresso-core"
+]
+
 androidx-compose = [
     "androidx-compose-material3",
     "androidx-compose-ui",
